[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Hat.gd" type="Script" id=1]

[node name="Hat" type="Node2D" groups=[
"STools",
]]
script = ExtResource( 1 )

[node name="Panel3" type="Panel" parent="."]
self_modulate = Color( 0, 0, 0, 1 )
margin_top = 20.0
margin_right = 188.0
margin_bottom = 260.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel4" type="Panel" parent="."]
margin_left = 5.0
margin_top = 55.0
margin_right = 185.0
margin_bottom = 251.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
self_modulate = Color( 0.152941, 0, 0, 1 )
margin_left = 5.0
margin_top = 35.0
margin_right = 185.0
margin_bottom = 95.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="."]
margin_left = 5.0
margin_top = 25.0
margin_right = 185.0
margin_bottom = 85.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 188.0
margin_bottom = 20.0
color = Color( 0.313726, 0.313726, 0.313726, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VariableEdit" type="LineEdit" parent="."]
margin_left = 10.0
margin_top = 55.0
margin_right = 130.0
margin_bottom = 80.0
align = 1
placeholder_text = "Variable"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Result" type="LineEdit" parent="."]
margin_left = 22.0
margin_top = 95.0
margin_right = 162.0
margin_bottom = 120.0
align = 1
editable = false
placeholder_text = "Result"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Close" type="Button" parent="."]
margin_left = 170.0
margin_right = 190.0
margin_bottom = 20.0
text = "x"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hide" type="Button" parent="."]
margin_left = 150.0
margin_right = 170.0
margin_bottom = 20.0
text = "_"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Draw" type="Button" parent="."]
margin_left = 10.0
margin_top = 30.0
margin_right = 54.0
margin_bottom = 50.0
text = "Draw"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Clear" type="Button" parent="."]
margin_left = 60.0
margin_top = 30.0
margin_right = 104.0
margin_bottom = 50.0
text = "Clear"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Move" type="Button" parent="."]
margin_right = 150.0
margin_bottom = 20.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Enter" type="Button" parent="."]
margin_left = 135.0
margin_top = 60.0
margin_right = 180.0
margin_bottom = 80.0
text = "Enter"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VariableHolder" type="TextEdit" parent="."]
margin_left = 10.0
margin_top = 120.0
margin_right = 180.0
margin_bottom = 245.0
readonly = true
show_line_numbers = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 45.0
margin_bottom = 19.0
text = "Random Drawing"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="text_changed" from="VariableEdit" to="." method="_on_VariableEdit_text_changed"]
[connection signal="text_entered" from="VariableEdit" to="." method="_on_VariableEdit_text_entered"]
[connection signal="pressed" from="Close" to="." method="_on_Close_pressed"]
[connection signal="pressed" from="Hide" to="." method="_on_Hide_pressed"]
[connection signal="pressed" from="Draw" to="." method="_on_Draw_pressed"]
[connection signal="pressed" from="Clear" to="." method="_on_Clear_pressed"]
[connection signal="button_down" from="Move" to="." method="_on_Move_button_down"]
[connection signal="button_up" from="Move" to="." method="_on_Move_button_up"]
[connection signal="pressed" from="Enter" to="." method="_on_Enter_pressed"]
